# automl-tabular-pipeline

./: .gitignore  LICENSE  README.md  README_Variable_Meta_Learning.md  data_preprocessing.ipynb  db.sqlite3  example_usage.py  feature_selection.ipynb  main_meta_learning.py  meta_dataset.csv  meta_preds.csv  my_study.db  playground.ipynb  pyproject.toml  run.py  tabPFN.ipynb  test_meta_model.ipynb  test_simple.py  variable_length_meta_model.pth
data/exam_dataset/: predictions.npy
src/automl/: AlgorithmSelectorAndTrainer.py  AutoMLPipeline.py  CustomPreprocessor.py  FeatureSelector.py  FeatureSelector_new.py  OptunaHPO.py  Transformer.py  UniversalPreprocessor.py  algo_prediction.ipynb  algorithms.py  algorithms_gpu.py  automl.py  automl_new.py  automl_pipeline.py  automl_run.py  complete_meta_automl.py  constants.py  constants_gpu.py  data.py  dataset_evaluator.py  example.db  load.py  meta-dataset.csv  meta-dataset.numbers  meta-dataset_edited.csv  meta-model-datasets.ipynb  meta.py  meta_Y.csv  meta_dataset.csv  meta_dataset_with_ranks.csv  meta_features.csv  meta_features.py  meta_features_180.csv  meta_features_dataset.csv  meta_features_gputested.csv  meta_features_v1.py  meta_learning.ipynb  meta_learning_dataset.csv  meta_model.pth  meta_model_test.pth  (+21 more)
