[project]
name = "automl"
license = { file = "LICENSE" }
version = "0.1.0"
dependencies = ["scikit-learn", "openml", "pandas", "numpy<2.0", "IPython", "neural-pipeline-search", "xgboost", "matplotlib"]
requires-python = ">=3.10"
authors = [{ name = "Balaji S B", email = "balajibavimane@gmail.com" }, { name = "Surbhi Nair", email = "user@user.com" }, { name = "Kenjiro Ono", email = "user@user.com" }]
readme = "README.md"
description = "AutoML - Tabular"
classifiers = [
  'Intended Audience :: Science/Research',
  'Intended Audience :: Developers',
  'License :: OSI Approved :: BSD License',
  'Programming Language :: Python',
  'Topic :: Software Development',
  'Topic :: Scientific/Engineering',
  'Operating System :: POSIX',
  'Operating System :: Unix',
  'Operating System :: MacOS',
  'Programming Language :: Python :: 3',
]
